      Mahogany, you can use it to find all important changes between releases.
      Please refer to the cvs update list archives for the even more detailed
      list of all changes.

      See at the end of file for the list of contributors (initials appearing
      in the second column of the changelog below).

Release 0.68 '' September xx, 2006
---------------------------------------

2006-12-25 VZ: Added "Remove attachments" command
2006-09-05 NB: Mahogany can now be compiled with wxWine

Release 0.67 'Constance' August 1, 2006
---------------------------------------

2006-06-26 VZ: added multipart/related support
2006-06-24 VZ: added simple whitelist support
2006-05-27 VZ: close all opened folders on suspend and reopen them on resume
2006-04-08 VZ: optionally remind user to add an attachment if it was forgotten
2006-04-08 VZ: support for using Python 2.4
2006-02-12 VZ: reuse an existing composer when replying to the same message twice
2005-11-28 VZ: updated to build with recent swig (>= 1.3.25)
2005-11-16 XN: allow user to drop messages from a folder to the composer window
2005-11-15 XN: allow user to drop files to the composer window
2005-09-24 VZ: added "Mark answered" command
2005-07-05 VZ: multiple config files for sharing options between installations
2005-06-24 VZ: automatically select the viewer best fit for the shown message
2005-05-15 VZ: added autocollecting of addresses in outgoing mail
2005-02-27 VZ: added "Compose|Set if is a reply..." command
2004-09-27 VZ: allow to select "open as mail message" in "Open with" dialog
2004-09-23 VZ: improved UTF-[78] support: try to guess correct encoding
2004-09-18 VZ: implemented support for Python functions in message templates
2004-09-13 VZ: added "Folder|Where is filter..." command
2004-08-13 VZ: "Show MIME Structure" allows to save multiple attachments at once
2004-07-17 VZ: full support for showing PGP/MIME encoded messages
2004-07-17 VZ: added "Send now" command to the composer "Compose" menu